tests/out/error/redef/import.in.bt
import bait.test_pkgs.demo

static demo := 1
